<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@color/colorDarkCyan">
    <RelativeLayout
        android:id="@+id/outer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="70dp"
        android:background="@color/colorWhite">
        <RelativeLayout
            android:id="@+id/upper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">
        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textSize="30sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please fill in this form to create an account!"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/signup"/>
        </RelativeLayout>
        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/upper"
            android:background="@color/colorSlateGray"
            android:layout_margin="2dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/line"
            android:layout_margin="20dp">

            <EditText
                android:id="@+id/firstname"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_marginBottom="15dp"
                android:background="@color/colorSlateGray"
                android:alpha="0.4"
                android:textColorHint="@android:color/background_dark"
                android:hint="@string/firstname"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="15sp"
                android:textColor="@color/colorBlack"/>

            <EditText
                android:id="@+id/lastname"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:hint="Last Name"
                android:inputType="text"
                android:outlineProvider="none"
                android:padding="10dp"
                android:textSize="15sp"
                android:background="@color/colorSlateGray"
                android:alpha="0.4"
                android:textColorHint="@android:color/background_dark"
                android:textColor="@color/colorBlack"/>
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/firstname"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textSize="15sp"
                android:padding="10dp"
                android:layout_marginBottom="15dp"
                android:background="@color/colorSlateGray"
                android:alpha="0.4"
                android:textColorHint="@android:color/background_dark"
                android:autofillHints="Email"
                android:textColor="@color/colorBlack"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/email"
                android:hint="Password"
                android:inputType="textWebPassword"
                android:textSize="15sp"
                android:padding="10dp"
                android:layout_marginBottom="15dp"
                android:background="@color/colorSlateGray"
                android:alpha="0.4"
                android:textColorHint="@android:color/background_dark"
                android:autofillHints="@string/Password" />
            <EditText
                android:id="@+id/confirmp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/password"
                android:hint="Confirm Password"
                android:inputType="textWebPassword"
                android:textSize="15sp"
                android:padding="10dp"
                android:layout_marginBottom="15dp"
                android:background="@color/colorSlateGray"
                android:alpha="0.4"
                android:textColorHint="@android:color/background_dark"
                android:textColor="@color/colorBlack"/>

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/confirmp"
                android:layout_marginBottom="15dp"
                android:text="@string/checkbox"
                android:textSize="12sp" />

            <Button
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkbox"
                android:background="@color/colorDarkCyan"
                android:padding="10dp"
                android:text="Sign Up"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                android:onClick="changeActivity"/>
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/loginlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="25dp"
        android:autoLink="phone"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="19sp" />

</RelativeLayout>